[gd_scene load_steps=4 format=3 uid="uid://ckqi4obr3cg8m"]

[ext_resource type="Script" path="res://Scenes/run/run.gd" id="1_fxmgj"]
[ext_resource type="PackedScene" uid="uid://crhxx81e0p4gg" path="res://Scenes/map/map.tscn" id="1_v43fy"]
[ext_resource type="Resource" uid="uid://b43p6lo4fgkcl" path="res://Scenes/run/run_startup.tres" id="2_vewfb"]

[node name="Run" type="Node"]
script = ExtResource("1_fxmgj")
run_startup = ExtResource("2_vewfb")

[node name="Map" parent="." instance=ExtResource("1_v43fy")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Map"

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="RewardsButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewards"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Treasure"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Campfire"

[node name="MenuButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"
